Fix vertically misaligned checkmarks in rights management user / group selection

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_checkbox.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_checkbox.scss
@@ -1,6 +1,6 @@
-.checkWrapper{
+.checkWrapper {
   cursor:pointer;
-  width:$fontSize;
+  display: inline-block;
   &.checkboxDisabled{@include opacity(0.4);}
   input[type="checkbox"] {
     display: none;
