--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/services.scss
@@ -162,11 +162,6 @@ fieldset.box {
 
   .checkboxColumn{
     text-align:center;
-    .checkWrapper {
-      display: inline-block;
-      float: none;
-      width: 1em;
-    }
   }
   .odd{background-color:darken($contentColor, 6%);}
 
